feat: hide invisible effects